--- a/src/main/webapp/WEB-INF/views/cemeteryDetailsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryDetailsPage.html
@@ -79,8 +79,8 @@
                                     '<tr><td>Town</td><td> ' + obj.location.town + '</td>'+
                                     '<tr><td>Cemetery Name </td><td> ' + obj.location.cemeteryName + '</td>'+
                                     '<tr><td>Location of Cemetery</td><td> ' + obj.location.locationOfCemetery + '</td>'+
-                                    '<tr><td>Contact Name</td><td> ' + obj.location.contactName + '</td>'+
-                                    '<tr><td>Contact Number</td><td> ' + obj.location.contactNumber + '</td>'+
+                                    '<tr><td>Contact Name</td><td> ' + obj.contactName + '</td>'+
+                                    '<tr><td>Contact Number</td><td> ' + obj.contactNumber + '</td>'+
                                     '<tr><td></td><td>&nbsp;'  + "</td></tr>"); 
 
 	    }
@@ -89,7 +89,8 @@
         
         $.ajax({ // ajax call to retrieve all cemeteries json objects 
                     type: "GET",
-                    url: "/CemeteryListingsWebApp/api/DeceasedListing/show",
+                    url: "/CemeteryListingsWebApp/api/cemetery/show",
+                    //url: "/CemeteryListingsWebApp/api/cemetery/id/"+ID+"",
                     dataType: "json",
                     success: function (data) {
                         console.log('success');
