--- a/src/main/webapp/WEB-INF/views/cemeteryDetailsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryDetailsPage.html
@@ -89,7 +89,7 @@
         
         $.ajax({ // ajax call to retrieve all cemeteries json objects 
                     type: "GET",
-                    url: "/CemeteryListingsWebApp/api/publishedListings/show",
+                    url: "/CemeteryListingsWebApp/api/cemeteryPublishedListings/getListingsByCemeteryID/"+ID+"",
                     //url: "/CemeteryListingsWebApp/api/cemetery/id/"+ID+"",
                     dataType: "json",
                     success: function (data) {
