--- a/src/main/webapp/WEB-INF/views/createCemetery.html
+++ b/src/main/webapp/WEB-INF/views/createCemetery.html
@@ -82,7 +82,7 @@
                     success: function (status, jqXHR) 
                     {
 
-                        indow.location.href = "/CemeteryListingsWebApp/api/cemetery/cemeterylistings";
+                        window.location.href = "/CemeteryListingsWebApp/api/cemetery/cemeterylistings";
                     },
 
                     error: function (jqXHR, status) 
