uhm, shit, i did a lot, fixed login name, logout not on all pages.. fixed login control added admin page

--- a/src/main/webapp/WEB-INF/views/adminHome.html
+++ b/src/main/webapp/WEB-INF/views/adminHome.html
@@ -26,7 +26,8 @@
         
         <div class="siteContent" align='center'>
             <h2>Submitted listings awaiting approval</h2>
-             <input type="button" id="createCemetery" value="Create new cemetery" align='center'>
+            <input type="button" id="createCemetery" value="Create new cemetery" align='center'>&nbsp;
+             <input type="button" id="adminApprovedListings" value="View All Approved Listings" align='center'>
             <table class="listings">
                 <tr><th>First Name</th><th>Surname</th><th>Maiden Name</th><th>Grave Number</th><th>Date Of Birth</th><th>Date Of Death</th><th>&nbsp;</th></tr>
                             
@@ -40,10 +41,27 @@
      <!--<script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script> -->
         
         <script type="text/javascript">
-            
+            var login = localStorage.username;
+
+            if($('.user') != null){
+                if(login == ""){
+                    $('.user').text("Login");
+                }else{
+
+                    $('.user').text(login);
+                }
+            }
+
+             $('#logout').click(function(){
+            localStorage.username = "";
+            });
             $('#createCemetery').click(function () {
                 window.location.href = "/CemeteryListingsWebApp/api/cemetery/newcemetery";
             })
+            $('#adminApprovedListings').click(function () {
+                window.location.href = "/CemeteryListingsWebApp/api/publishedListings/adminDeceasedListings";
+            })
+            
             
         	$.ajax({
                                 type: "GET", 
