--- a/src/main/webapp/WEB-INF/views/contact.html
+++ b/src/main/webapp/WEB-INF/views/contact.html
@@ -37,7 +37,22 @@
             </div>
         </div>
     </div>
-                      
+       <script type="text/javascript">
+            
+            var login = localStorage.username;
+
+                if($('.user') != null){
+                    if(login == ""){
+                        $('.user').text("Login");
+                    }else{
+
+                        $('.user').text(login);
+                    }
+                }
+            $('#logout').click(function(){
+                localStorage.username = "";
+            });
+        </script>
     
    
    
