--- a/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
+++ b/src/main/webapp/WEB-INF/views/cemeteryListingsPage.html
@@ -44,6 +44,9 @@
            console.log('hi');
     	   
     	   var countData = 0;
+           $('#logout').click(function(){
+                localStorage.username = "";
+            });
                $.ajax({ // ajax call to retrieve all cemeteries json objects 
                     type: "GET",
                     url: "/CemeteryListingsWebApp/api/cemetery/show",
